Udapte some files

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 *.log
 *.pot
 *.pyc
-__pycache__/
+# __pycache__/
 local_settings.py
-
-
+.DS_Store
+# __pycache__
 # Virtual Environment
 .env
 venv/
